--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "streamlit>=1.42.2",
+    "tenacity>=9.0.0",
     "tiktoken>=0.9.0",
+    "watchdog>=6.0.0",
 ]
 
 [tool.uv]
