--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
     "streamlit>=1.42.2",
+    "tantivy==0.22.0",
     "tenacity>=9.0.0",
     "tiktoken>=0.9.0",
     "watchdog>=6.0.0",
