feat: Add LlamaIndex integration for advanced search capabilities
- Added LlamaIndex core, vector stores, and LLM integration packages
- Updated dependencies to support advanced RAG functionality
- Prepared for hybrid search and query transformation features
- Set up LLM provider flexibility for OpenAI and Deepseek models

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ dependencies = [
     "fastapi>=0.115.10",
     "ipykernel>=6.29.5",
     "lancedb>=0.20.0",
+    "llama-index-core>=0.12.21",
+    "llama-index-llms-openai>=0.3.25",
+    "llama-index-vector-stores-lancedb>=0.3.0",
     "numpy>=1.26.4",
     "openai>=1.63.2",
     "pandas>=2.2.3",
