--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi>=0.115.10",
     "ipykernel>=6.29.5",
     "lancedb>=0.20.0",
+    "llama-index>=0.12.21",
     "llama-index-core>=0.12.21",
     "llama-index-llms-openai>=0.3.25",
     "llama-index-vector-stores-lancedb>=0.3.0",
