--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "lancedb>=0.20.0",
     "llama-index>=0.12.21",
     "llama-index-core>=0.12.21",
+    "llama-index-embeddings-openai>=0.2.1",
     "llama-index-llms-openai>=0.3.25",
     "llama-index-vector-stores-lancedb>=0.3.0",
     "numpy>=1.26.4",
