--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,22 @@ dependencies = [
     "tiktoken>=0.9.0",
     "uvicorn>=0.34.0",
     "watchdog>=6.0.0",
+    "torch>=2.6.0",
+    "torchvision>=0.21.0",
 ]
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-cu124" },
+]
+torchvision = [
+    { index = "pytorch-cu124" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cu124"
+url = "https://download.pytorch.org/whl/cu124"
+explicit = true
 
 [tool.uv]
 no-build-isolation-package = ["torch", "torchvision", "torchaudio"]
